--- a/fsvpy_tutorial.ipynb
+++ b/fsvpy_tutorial.ipynb
@@ -72,7 +72,7 @@
    "metadata": {},
    "source": [
     "# Locate streaks\n",
-    "Now, we can locate streaks in the image.  This accomplished using the function locate_streaks. This function identifies streaks in your image using a contour finding algorithm and then returns a list where each entry contains the coordinates of a streak.  locate_streaks first pre-processes the image with a bandpass filter and a gaussian blur (the streak properties are measured on the raw data).  It has a default value of 5 times the standard deviation in intensity as a contour intensity level, but this can be adjusted using the optional contour_value argument, see the API for details.  "
+    "Now, we can locate streaks in the image.  This can be accomplished using the function locate_streaks. This function identifies streaks in your image using a contour finding algorithm and then returns a list where each entry contains the coordinates of a streak.  locate_streaks first pre-processes the image with a bandpass filter and a gaussian blur (the streak properties are measured on the raw data).  It has a default value of 5 times the standard deviation in intensity as a contour intensity level, but this can be adjusted using the optional contour_value argument, see the API for details.  "
    ]
   },
   {
@@ -371,7 +371,7 @@
    "metadata": {},
    "source": [
     "# Refine streak properties: fit streaks\n",
-    "Now that we are happy with our identification and filtering, we are ready to more precisely extract our streak properties.  To do so, we will use the fit_shape function.  This function uses the location of the streak to extract a piece of the original image, and then uses fitting function to extract streak characteristics.  These function assume straight streaks, though they may be an angle relative to the axis (the fitting functions rotate the streak before doing the fit).  If you have curved streaks, see the example below illustrated the optional package - it is much slower, but can accomadate streaks of arbitrary shape.  If the fitting does not converge, streak height and width are set to zero.  The averaging and other parameters for fitting can be set with optional arguments, see the API for details."
+    "Now that we are happy with our identification and filtering, we are ready to more precisely extract our streak properties.  To do so, we will use the fit_shape function.  This function uses the location of the streak to extract a piece of the original image based on the feature's bounding box, and then uses a fitting function to extract streak characteristics.  This function assumes are centered within the bounding box and its width and height are aligned with flow and gradient directions respectively. We gaurantee this rotating the bounding box relative to the orientation angle of the identified contour (the fitting functions rotate the streak before doing the fit).  If you have curved streaks, see the example below illustrated the optional package - it is much slower, but can accomadate streaks of arbitrary shape.  If the fitting does not converge, streak height and width are set to zero.  The averaging and other parameters for fitting can be set with optional arguments, see the API for details."
    ]
   },
   {
@@ -425,7 +425,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "All of the streak data is in the dataframe 'fitted_streaks'.  To save it for future processing, or working with it in another environment, the easiest thing to do is save the data frame as a comma-seperated-value file; make sure you indicate the filepath where you want this to save."
+    "All of the streak data is in the dataframe 'fitted_streaks'.  To save the result for future processing or work with it in another environment, the easiest thing to do is write the data frame as a comma-seperated-value file; make sure you indicate the filepath where you want this to save."
    ]
   },
   {
